flux/apps/thelounge/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  namespace: thelounge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: thelounge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thelounge
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: thelounge
          image: docker.io/linuxserver/thelounge:4.5.1
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: thelounge
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: thelounge-config
          livenessProbe:
            tcpSocket:
              port: thelounge
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: thelounge
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "250M"
              cpu: ".25"
            limits:
              memory: "250M"
              cpu: ".25"
      volumes:
        - name: thelounge-config
          persistentVolumeClaim:
            claimName: thelounge-config
