flux/apps/thelounge/service.yml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: thelounge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: thelounge
  ports:
    - name: thelounge
      port: 9000
      targetPort: thelounge
      protocol: TCP
