flux/apps/thelounge/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thelounge-web
  namespace: thelounge
  annotations:
    switchboard.borchero.com/ignore: "all"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`irc.tartarus.us`)
      kind: Rule
      services:
        - name: thelounge
          kind: Service
          port: 9000

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
